[package]
name = "cargo-cross-test"
version = "0.1.1"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"
description = "Run native and web tests with a single command."
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/cargo-cross-test"
repository    = "https://github.com/notdanilo/cargo-cross-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cross-test = "0.1.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.20"
